# verl

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.verl.ray  QWEN3_5_ADAPTER_GUIDE.md  README copy.md  README.md  README_GKE_GRPO.md  build-enroot-container.sh  dapo_7b_math_vllm_2_2_lora_run.sh  dapo_7b_vllm_lora_2_2_ra32_st0_ts1.sbatch  demo-6  demo-7  doc01_verl_agent.md  fix_gpu_and_run.sh  log-6.txt  log-7-h200.txt  log-7.txt  manage_envs.py  multi_tenant_run.sbatch  multi_tenant_run.sh  patch_validate.py  playground.ipynb  pr_body_draft.md  progress.md  pyproject.toml  rdkit_grpo_rjob.sh  rdkit_grpo_rjob_min.sh  requirements-intel-gpu.txt  requirements-npu.txt  requirements-test.txt  requirements.txt  requirements_sglang.txt  (+24 more)
.agent/skills/: create-issue.md  create-pr.md  pr.md
.claude/skills/: create-issue.md  create-pr.md
.codex/skills/: build-image
.cursor/agents/: decoupled-spec-architect.md  rollout-doc-writer.md  rollout-runtime-debugger.md  rollout-test-architect.md  spec-log-forensics.md
.github/: PULL_REQUEST_TEMPLATE.md  docker-build-ascend-a3-qwen3_5_test.yml
.github/workflows/: README.md  cluster_analyse.yml  cpu_unit_tests.yml  doc.yml  docker-build-ascend-a2.yml  docker-build-ascend-a3-qwen3_5.yml  docker-build-ascend-a3-qwen3_5_test.yml  docker-build-ascend-a3.yml  docker-build-ascend-sglang-a2.yml  docker-build-ascend-sglang-a3.yml  docker-build-rocm.yaml  docker-build-sglang.yml  docker-build-vllm.yml  e2e_ascend.yml  e2e_fully_async_policy.yml  e2e_fully_async_policy_ascend.yml  e2e_fully_async_policy_opd.yml  e2e_fully_async_policy_trtllm.yml  e2e_on_policy_ascend.yml  e2e_on_policy_sglang.yml  e2e_on_policy_trtllm.yml  e2e_on_policy_vllm.yml  e2e_one_step_off_policy.yml  e2e_one_step_off_policy_ascend.yml  e2e_ppo_grpo_trainer_trtllm.yml  e2e_ppo_trainer.yml  e2e_ppo_trainer_megatron_fsdp_vllm.yml  e2e_ppo_trainer_megatron_sglang.yml  e2e_ppo_trainer_megatron_sglang_2.yml  e2e_ppo_trainer_megatron_sglang_2_ascend.yml  e2e_sft_llm.yml  (+33 more)
.opencode/: README.md
DataObs/: Point.md  README.md  config_template.yaml
apertus/: data_preprocess.py  display_answer_tools.py  preprocess_qa_gym.py
bash/: 20251214.sh  20251216.sh  20251217.sh  20251220.sh  20251220b.sh  20251221.sh  20260203.sh  20260203_retry_failed.sh  20260203_rollout_sweep.sh  20260204_rollout_sweep_gsm8k.sh  20260204_rollout_sweep_gsm8k_base.sh  20260327_gsm8k_mc_sampled.sh  20260529_gsm8k_mc_sampled.sh  20260604_gsm8k_dynamic_mc_verl_native.sh  evaluate_base_qwen_gsm8k.sh
config/: bash_config.env  evaluation.yaml  generation.yaml
cxb_dev/: AGENTS.md  review_prompt.md
docker/: Dockerfile.rocm7.2  Dockerfile.sglang.gb200  Dockerfile.stable.sglang  Dockerfile.stable.trtllm  Dockerfile.stable.vllm  Dockerfile.uv.cu129  Dockerfile.uv.cu130  Dockerfile.vllm.gb200  Dockerfile_uv  README.md
docs/: PR1_PLACEMENT_SCOPE.md  README_vllm0.7.md  README_vllm0.8.md  cluster_analyse.md  conf.py  continuous_token_multimodal_rfc.md  extend_guide.rst  hybrid_flow.rst  index.rst  requirements-docs.txt  single_controller.rst  vlm_ct_pr_body.md  xr_grpo.md
evaluate/: README.md  eval_batch.sh  eval_extra_datasets.sh  eval_ragchecker.sh  evaluate_search_r1.py
evidence/: e2e_grpo_xpu_evidence.md
examples/: README.md  test_2048_strategy.py
examples/uv/: .gitignore  README.md  example.sh  pyproject.toml  ray_runtime.yaml
llm_agent/: business_agent.py
my_logs/: 2048_log_20260309_184055.txt  2048_log_20260309_193103.txt
npu_env/: activate_verl_env.sh  activate_verl_env_fixed.sh  npu_env.md  proxy.md  test_verl_env.py  verify_verl_installation.py  verl_installation_summary.md  verl_qwen3.5_npu_installation_guide.md
recipe_aoshen/: phase_b_mooncake.sh
recipes_custom/: setup_env.sh
reliable-gsm8k-builder/: README.md  check_dynamic_mc_smoke_log.py  create_dynamic_mc_seed.py  requirements.txt  run_build.py  run_on_policy_loop.py
reproduce/: eval_after_train.sh  evaluation.py
results/: REPORT.md  summary.json
scripts/: PARAMETERS.md  benchmark_daytona_tool.py  build_zero2_technical_report.py  chat_template_checker.py  chat_template_mock_trajectories.py  converter_hf_to_mcore.py  eval.sh  eval_dataobs.sh  fake_hf_cache.sh  fully_async_scaling_plots.py  generate_trainer_config.sh  grpo.sh  gsm8k_message_convert.py  gsm8k_to_parquet.py  huggingface_dataset.sh  init_random_model.py  inspect_tq_checkpoint.py  install_sglang_mcore_npu.sh  install_vllm_mcore_npu.sh  install_vllm_sglang_mcore.sh  install_vllm_sglang_mcore_stable.sh  json_indent.py  legacy_model_merger.py  math_gt_convert.py  megatron_merge_lora.py  p2p_control_smoke.py  ppo.sh  print_cfg.py  push_to_wandb.py  qwen_gsm8k_eval.py  run_ds_stage12_seed_bench_gate.sh  run_p2p_live_smoke.py  run_zero_six_matrix.sh  sft.sh  sft_dataobs.sh  sft_json.sh  verl-build.sh  wandb_rank_runs.py
search_r1_preprocess/: checker_medrag.py  checker_medrag_gpt4omini.py  searchr1_dataset_tool.py
tests/: test_adaptive_kl_checkpoint.py  test_base_config_on_cpu.py  test_checkpoint_offload.py  test_per_layer_optimizer_step.py  test_protocol_on_cpu.py  test_protocol_v2_on_cpu.py  test_sft_loss_roll_bug.py  test_vision_dp.py  test_vision_dp_distributed.py  vllm_batch_invariance_test.py
tests_custom/: test_wandb_rank_runs_steps_since_best.py
verl/: __init__.py  base_config.py  protocol.py
verl_sft_test/: gsm8k-fsdp-fsdp-sp1-fsdp1-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl  gsm8k-torchtitan-tp1-pp1-cp1-dp1-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl  gsm8k-torchtitan-tp1-pp1-cp1-dp2-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl  gsm8k-torchtitan-tp2-pp1-cp1-dp2-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl
verl_sft_test_0208/: gsm8k-torchtitan-tp2-pp1-cp1-dp2-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl
verl_sft_test_0209/: gsm8k-torchtitan-tp1-pp1-cp1-dp2-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl  gsm8k-torchtitan-tp2-pp1-cp1-dp2-pad-no_padding-use_remove_padding-True-mode-spmd.jsonl
(+2271 files in other folders)
