[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl"
dynamic = ["version", "dependencies", "authors", "urls"]
description = "verl: Volcano Engine Reinforcement Learning for LLM"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.13"

# One universal uv.lock for the whole project. Each backend is a PEP 621
# extra; mutually exclusive ones are declared in [tool.uv].conflicts (below)
# so a single `uv lock` resolves them all into one lockfile. At runtime you
# materialize exactly one conflict-free combination into the project venv:
#
#   uv sync --extra fsdp --extra vllm     # or: python manage_envs.py sync fsdp vllm
#
# There is no per-backend lockfile and no Ray py_executable switching — every
# Ray worker group runs from the same .venv. Backend / torch / Docker map
# (GPU first):
#
#   cu13.0 (docker/Dockerfile.uv.cu130) — torch 2.11.0:
#     vllm, sglang, fsdp, megatron
#   cpu — torch 2.11.0 cpu wheels (CI / unit tests / dev sanity)
#
# Both torch lines (2.11.0+cu130, 2.11.0+cpu) coexist in this one lock:
# [tool.uv].conflicts forks the resolution so each "world" pins its own torch.
# uv can hold multiple *versions* of a package across conflict forks — e.g.
# flashinfer resolves to vllm's pinned 0.6.12 in the vllm fork but sglang's own
# pin in the sglang fork (both from PyPI); see [tool.uv.sources] for wheelhouse
# routing of the prebuilt native packages.
#
# DEFERRED — trtllm. tensorrt-llm 1.3.0rc14 needs cuda-python>=13, so it is
# really a CUDA-13 backend (torch 2.10.0+cu130), but that RC sdist's
# tightly-pinned tree makes `uv lock` explode (>17 min); its recipe is
# preserved below (commented out) to re-enable on a stable release.
#
# cuDNN / NCCL pip wheels: torch's own wheel transitively pins them (e.g. torch
# 2.11.0+cu130 -> nvidia-cudnn-cu13==9.19.0.56). What matters is that the apt
# debs in the Dockerfile match whatever uv resolves into uv.lock. After
# `uv lock` (or `python manage_envs.py lock`), grep the resolved
# `nvidia-cudnn-*==X` / `nvidia-nccl-*==Y` lines in uv.lock and update
# CUDNN_VERSION / NCCL_VERSION in docker/Dockerfile.uv.cu130.
[project.optional-dependencies]

# ---- legacy small extras (kept verbatim from setup.py) ---------------------
test          = ["pytest", "pre-commit", "py-spy", "pytest-asyncio", "pytest-rerunfailures"]
math          = ["math-verify"]
mcore         = ["mbridge"]
# Kept as a named extra so the git source lives in exactly one place (and
# `--extra transferqueue` still works), but it is no longer opt-in: verl-core
# below pulls it in, so every synced backend always installs it.
transferqueue = ["TransferQueue @ git+https://github.com/Ascend/TransferQueue.git@main"]

# Shared runtime deps; included by every backend extra via `verl[verl-core]`.
# TransferQueue is always installed (pulled in via `verl[transferqueue]`, not
# left as an opt-in extra): verl.utils.transferqueue_utils is imported at module
# top level on core paths (protocol.py, single_controller/base/decorator.py), so
# every backend must have it available regardless of which extras are synced.
verl-core = [
    "verl[transferqueue]",
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "hydra-core",
    "numpy>=2.0.0",
    "pandas",
    "peft",
    "pyarrow>=19.0.0",
    "pybind11",
    "pylatexenc",
    "ray[default]>=2.41.0",
    "torchdata",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "wandb",
    "packaging>=20.0",
    "tensorboard",
    "fastapi",
    "uvicorn",
    "mathruler",
    "qwen_vl_utils",
    "cachetools",
    "nvtx",
    "pytest",
    "pytest-asyncio",
    "pytest-rerunfailures",
]

# Internal sub-extra that pins flash-attn once for the parent extras (fsdp /
# megatron). Routed to the wheelhouse in [tool.uv.sources] below. Don't install
# alone — it needs the parent extra's torch / cuDNN pins.
flash-attn-cu130torch211 = ["flash-attn==2.8.3"]

# ---- inference backends ----------------------------------------------------
vllm = [
    "verl[verl-core]",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    # vllm 0.24.0 (the wheelhouse builds the v0.24.0 tag, commit ee0da84ab). The
    # release now ships a properly versioned "0.24.0" wheel instead of the old
    # setuptools_scm "0.1.dev1+g<hash>.d<date>" fallback, so pin it directly.
    "vllm==0.24.0",
    # flashinfer (python + cubin) is a transitive dep of vllm 0.24, which
    # hard-pins it to ==0.6.12 — pure-python wheels, so let vllm pull them from
    # PyPI. The wheelhouse ships flashinfer 0.6.13 (doesn't match vllm's pin),
    # and vllm 0.24 needs no flashinfer-jit-cache, so nothing is routed here.
    "mbridge",
    # vllm 0.24 needs transformers 5.5.3 (sglang / cpu stay on 5.3.0). The pin
    # is enforced per-engine in [tool.uv].override-dependencies below.
    "transformers==5.5.3",
]

sglang = [
    "verl[verl-core]",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    # sglang is routed to the wheelhouse cu130 build (see [tool.uv.sources]);
    # the wheelhouse ships sglang + sglang-kernel together under the
    # sglang-v0.5.12 release tag.
    "sglang==0.5.12",
    # sglang-kernel is a transitive dep of sglang; declare it directly so
    # [tool.uv.sources] routes it to the wheelhouse cu130 build
    # (0.4.2.post2+cu130) instead of the generic PyPI build.
    "sglang-kernel",
    # sglang hard-depends on flash-attn-4, but we deliberately EXCLUDE it (the
    # project ships only buggy betas; see [tool.uv].override-dependencies below).
    # It is imported lazily — only the "fa4" attention backend pulls it in
    # (attention_registry.py) — so the default backends work without it. To
    # re-enable fa4, see the exclusion note in override-dependencies.
    "mbridge",
    "transformers==5.3.0",
]

# DEFERRED — trtllm is a CUDA-13 backend. tensorrt-llm 1.3.0rc14 requires
# cuda-python>=13 (cuda-bindings 13.x), so its torch 2.10.0 must come
# from the cu130 index and it would build in docker/Dockerfile.uv.cu130 (torch
# 2.10 fork, conflict-gated against the torch-2.11 backends). We defer it because
# that release is an unstable RC sdist whose large, tightly-pinned CUDA-13 tree
# (tensorrt~=10.15.1, cuda-python>=13, triton==3.6.0, nvidia-modelopt, cuda-tile,
# mpi4py, ...) makes `uv lock` explode (>17 min, no completion). To re-enable
# once tensorrt-llm ships a stable release: uncomment this extra, add the cu130
# torch routing + `{ extra = "trtllm" }` conflict entries (both flagged below),
# and re-lock — pinning cuda-python/tensorrt if backtracking is still slow.
# trtllm = [
#     "verl[verl-core]",
#     "torch==2.10.0",   # route to pytorch-cu130 (CUDA 13), see [tool.uv.sources]
#     "tensorrt-llm==1.3.0rc14 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
#     "mbridge",
#     "transformers==5.3.0",
#     "numpy>=2.0.0,<2.4",
#     "ray[default]==2.54.1",
# ]

# ---- training backends -----------------------------------------------------
fsdp = [
    "verl[verl-core]",
    "verl[flash-attn-cu130torch211]",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "liger-kernel",
    "trl==0.27.0",
    # transformers is intentionally NOT pinned here: a trainer inherits the
    # transformers of whichever inference engine it is synced with (vllm -> 5.5.3,
    # sglang -> 5.3.0). Trainer-only / no-engine forks fall back to 5.3.0. See
    # the per-engine pins in [tool.uv].override-dependencies below.
]

# apex / TE / flash-attn come prebuilt from the wheelhouse (see
# [tool.uv.sources]); megatron-core is still git-sourced (built at sync time
# with build isolation). cupy-cuda13x is for Megatron MoE all-to-all;
# onnxscript papers over a TE import quirk (its pytorch module imports it
# undeclared — the reference Dockerfiles add it standalone for the same reason).
megatron = [
    "verl[verl-core]",
    "verl[flash-attn-cu130torch211]",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "nvidia-mathdx",
    "apex",
    "transformer-engine",
    "onnxscript",
    "trl==0.27.0",
    "matplotlib",
    "liger-kernel",
    "mbridge",
    "megatron-core",
    "cupy-cuda13x==14.0.1",
    # transformers is intentionally NOT pinned here: a trainer inherits the
    # transformers of whichever inference engine it is synced with (vllm -> 5.5.3,
    # sglang -> 5.3.0). Trainer-only / no-engine forks fall back to 5.3.0. See
    # the per-engine pins in [tool.uv].override-dependencies below.
]

# CI / unit tests / dev sanity. No GPU runtime.
cpu = [
    "verl[verl-core]",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "transformers==5.3.0",
    "pytest",
    "pre-commit",
    "py-spy",
    "pytest-asyncio",
    "pytest-rerunfailures",
]

[tool.ruff]
line-length = 120
exclude = ["scripts/legacy_model_merger.py"]

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
# c.f. https://github.com/vllm-project/vllm/blob/ce8d6b75fc0586045df75ee1568a5b5f9957251b/pyproject.toml
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # `.log()` statement uses f-string
    "G004",
    # X | None for type annotations
    "UP045",
    # deprecated import
    "UP035",
]

[tool.mypy]
pretty            = true
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
"verl.trainer.config.algorithm",
"verl.trainer.ppo.core_algos",
"verl.trainer.ppo.reward",
"verl.workers.reward_manager",
"verl.workers.reward_manager.*",
]
ignore_errors = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "verl/version/version"}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
verl = [
  "version/*",
  "trainer/config/*.yaml",
  "trainer/config/*/*.yaml",
  "experimental/*/config/*.yaml",
]

# One universal uv.lock. `uv lock` resolves every extra at once; mutually
# exclusive extras (see `conflicts` below) co-exist in the lock but never in
# a single synced venv. `uv sync --extra <a> --extra <b>` then materializes
# one conflict-free combination into .venv. See docs/start/install.rst.
[tool.uv]
# x86_64 Linux + Python 3.12 only — Ascend NPU, aarch64 GPU, and other Python
# versions are out of scope for the uv flow (keeps the lock single-variant).
environments = [
    "python_full_version >= '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# Mutually exclusive extras — at most one of each set per `uv sync`. Distinct
# torch "worlds" never mix in one venv (cu130/torch-2.11: vllm sglang fsdp
# megatron; cpu/torch-2.11). uv resolves each world in its own fork, which is
# what lets one lock hold the cu130 and cpu torch builds at once (and torch
# 2.10.0 too, once the DEFERRED trtllm backend rejoins).
#   * vllm / sglang are competing inference engines and both pin torch 2.11.0;
#     cpu is the GPU-free CI slice. The three are mutually exclusive.
#   * cpu additionally excludes the GPU training backends fsdp / megatron.
# fsdp and megatron are NOT mutually exclusive with a (cu130) inference engine,
# so a training run can sync e.g. `--extra megatron --extra vllm` into one venv.
conflicts = [
    # (trtllm DEFERRED — re-add `{ extra = "trtllm" }` to each set below when it
    #  rejoins the lock as a CUDA-13 backend; see the trtllm extra note above.)
    [{ extra = "vllm" }, { extra = "sglang" }, { extra = "cpu" }],
    [{ extra = "fsdp" }, { extra = "cpu" }],
    [{ extra = "megatron" }, { extra = "cpu" }],
]

# Global override pins:
#   * transformers tracks the INFERENCE ENGINE, pinned per-extra (overrides both
#     the upstream `<5` caps and the vllm/sglang/cpu `transformers==` lines above,
#     since uv overrides are absolute). vllm 0.24 needs 5.5.3; sglang 0.5.12 and
#     the cpu dev slice need 5.3.0. Trainers (fsdp / megatron) carry NO pin of
#     their own, so in a real RL sync (`vllm+fsdp`, `sglang+megatron`, ...) they
#     inherit the engine's version; the trailing `extra != <engines/cpu>` entry
#     pins trainer-only / no-engine forks (and bare verl) to 5.3.0. These `extra`
#     markers are conflict markers — uv evaluates them per resolution fork, so
#     `vllm+fsdp` resolves to a single transformers (5.5.3) with no clash.
#     (trtllm DEFERRED: when it rejoins as an engine, add
#     `transformers==<ver> ; extra == 'trtllm'` and extend the trailing marker.)
#   * numpy>=2.0.0 floor for every backend.
#   * kernels>=0.10.2,<0.11 — sglang depends on `kernels` UNBOUNDED, so the
#     resolver otherwise grabs the newest (0.15.x). kernels>=0.15 makes a
#     version/revision MANDATORY for Hub-backed LayerRepository entries, which
#     transformers 5.3.0's integrations/hub_kernels.py does not pass, so it dies
#     at import ("Either a revision or a version must be specified"; see
#     huggingface/transformers#46291). Pin to the exact window transformers 5.3.0
#     itself declares for its `kernels` extra (>=0.10.2,<0.11); sglang's dep is
#     unbounded so this satisfies it too.
override-dependencies = [
    "transformers==5.5.3 ; extra == 'vllm'",
    "transformers==5.3.0 ; extra == 'sglang'",
    "transformers==5.3.0 ; extra == 'cpu'",
    "transformers==5.3.0 ; extra != 'vllm' and extra != 'sglang' and extra != 'cpu'",
    "numpy>=2.0.0",
    "kernels>=0.10.2,<0.11",
]

# Skip lock-time metadata-extraction builds for the git-source packages whose
# upstreams have no [project] section or use a dynamic version. uv trusts these
# declarations; the sync-time source build still runs normally. Versions track
# [tool.uv.sources] below; bump together. (apex / transformer-engine /
# flash-attn / vllm / flashinfer / sglang-kernel are prebuilt wheelhouse wheels
# now, so uv reads their metadata straight from the wheel — no entry needed.)
[[tool.uv.dependency-metadata]]
name = "megatron-core"
version = "0.18.0"
requires-dist = ["torch>=2.6.0", "numpy", "packaging>=24.2"]

[[tool.uv.dependency-metadata]]
name = "mbridge"
version = "0.15.1"
requires-dist = []

# Heavy native packages come prebuilt from the verl wheelhouse (cu130 / torch
# 2.11 / cp312), so there is no source build here — no no-build-isolation, no
# extra-build-dependencies/-variables, and no nvcc/MAX_JOBS at sync time. Each
# is a single build routed globally. (flashinfer is deliberately NOT routed:
# vllm 0.24 hard-pins flashinfer==0.6.12 and sglang pins its own, both pulled
# pure-python from PyPI; the wheelhouse's 0.6.13 wheels match neither pin.)
[tool.uv.sources]
apex                 = { index = "verl-wheelhouse" }
flash-attn           = { index = "verl-wheelhouse" }
transformer-engine   = { index = "verl-wheelhouse" }
sglang               = { index = "verl-wheelhouse" }
sglang-kernel        = { index = "verl-wheelhouse" }
vllm                 = { index = "verl-wheelhouse" }

# megatron-core / mbridge are not in the wheelhouse; keep the reference
# Dockerfile git revs (source-built at sync time with build isolation).
mbridge            = { git = "https://github.com/ISEEKYAN/mbridge.git",         rev = "641a5a0" }
megatron-core      = { git = "https://github.com/NVIDIA/Megatron-LM.git",       tag = "core_v0.18.0" }

# Per-extra routing to the matching pytorch wheel index.
torch = [
    { index = "pytorch-cu130", extra = "vllm" },
    { index = "pytorch-cu130", extra = "sglang" },
    { index = "pytorch-cu130", extra = "fsdp" },
    { index = "pytorch-cu130", extra = "megatron" },
    { index = "pytorch-cpu",   extra = "cpu" },
    # trtllm (DEFERRED) would route to CUDA 13 here:
    #   { index = "pytorch-cu130", extra = "trtllm" },
]
torchvision = [
    { index = "pytorch-cu130", extra = "vllm" },
    { index = "pytorch-cu130", extra = "sglang" },
    { index = "pytorch-cu130", extra = "fsdp" },
    { index = "pytorch-cu130", extra = "megatron" },
    { index = "pytorch-cpu",   extra = "cpu" },
]
torchaudio = [
    { index = "pytorch-cu130", extra = "vllm" },
    { index = "pytorch-cu130", extra = "sglang" },
    { index = "pytorch-cu130", extra = "fsdp" },
    { index = "pytorch-cu130", extra = "megatron" },
    { index = "pytorch-cpu",   extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# The verl wheelhouse hosts prebuilt cu130 / torch-2.11 / cp312 native wheels.
# We route apex, flash-attn, transformer-engine, sglang-kernel, and vllm here;
# `explicit = true` means only those routed in [tool.uv.sources] above are
# pulled from here — everything else (including flashinfer) stays on PyPI.
[[tool.uv.index]]
name = "verl-wheelhouse"
url = "https://etogaosion.github.io/verl-wheelhouse/simple/"
explicit = true
